--- a/src/app/less/base.less
+++ b/src/app/less/base.less
@@ -1,7 +1,7 @@
-@font-stack: Helvetica, sans-serif;
-@primary-color: #fff;
+@link-color: #428bca; // sea blue
+@link-color-hover: darken(@link-color, 10%);
 
 body {
-	font: 100% @font-stack;
-	color: @primary-color;
+	font: 100% @link-color;
+	color: @link-color-hover;
 }
