--- a/src/template/index.html
+++ b/src/template/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<title>React App</title>
 	</head>
-	<body>
+	<body style="background-color: #000;">
 		<div id="root"></div>
 	</body>
 </html>
