--- a/src/app/app.less
+++ b/src/app/app.less
@@ -1,5 +1,5 @@
-.body {
-	width: 100px;
-	height: 100px;
-	background-color: red;
-}
+// .body {
+// 	width: 100px;
+// 	height: 100px;
+// 	background-color: red;
+// }
