master:[add] select

--- a/src/app/select/select.less
+++ b/src/app/select/select.less
@@ -1,2 +1,105 @@
-.select {
+.selectModalWrap {
+	position: fixed;
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(0, 0, 0, 0.7);
+	overflow: hidden;
+	:global {
+		.select {
+			position: fixed;
+			bottom: 0;
+			left: 0;
+			transform: translateY(-100%);
+			height: 300px;
+			background-color: #fff;
+			width: 100%;
+
+			.header {
+				height: 40px;
+				display: flex;
+				align-items: stretch;
+				font-size: 18px;
+				line-height: 40px;
+				.cancel,
+				.confirm {
+					padding: 0 20px;
+				}
+				.title {
+					flex: 1;
+					text-align: center;
+				}
+			}
+			.fixWidth {
+				width: 90%;
+				margin: 0 auto;
+				position: relative;
+				.selectLine {
+					height: 40px;
+					width: 100%;
+					position: absolute;
+					top: 80px;
+					pointer-events: none;
+					-webkit-box-sizing: border-box;
+					box-sizing: border-box;
+					border-top: 1px solid #dcdcdc;
+					border-bottom: 1px solid #dcdcdc;
+				}
+				.shadowMask {
+					position: absolute;
+					top: 0;
+					width: 100%;
+					height: 200px;
+					background: -webkit-gradient(
+						linear,
+						left top,
+						left bottom,
+						from(#ffffff),
+						color-stop(rgba(255, 255, 255, 0)),
+						to(#ffffff)
+					);
+					background: -webkit-linear-gradient(top, #ffffff, rgba(255, 255, 255, 0), #ffffff);
+					background: linear-gradient(to bottom, #ffffff, rgba(255, 255, 255, 0), #ffffff);
+					opacity: 0.9;
+					pointer-events: none;
+				}
+			}
+			.wheels {
+				width: 100%;
+				height: 200px;
+				overflow: hidden;
+				display: flex;
+				.wheel {
+					flex: 1;
+					text-align: center;
+					flex: 1;
+					text-align: center;
+					flex-direction: row;
+					display: flex;
+					ul {
+						flex: 1;
+						padding: 0;
+						margin: 0;
+						display: block;
+						text-align: center;
+						-webkit-transition: -webkit-transform 0.18s ease-out;
+						transition: -webkit-transform 0.18s ease-out;
+						transition: transform 0.18s ease-out;
+						transition: transform 0.18s ease-out, -webkit-transform 0.18s ease-out;
+					}
+					li {
+						font-size: 15px;
+						display: block;
+						height: 40px;
+						line-height: 40px;
+						cursor: pointer;
+						overflow: hidden;
+						white-space: nowrap;
+						text-overflow: ellipsis;
+					}
+				}
+			}
+		}
+	}
 }
