--- a/src/app/select/select.less
+++ b/src/app/select/select.less
@@ -6,12 +6,23 @@
 	bottom: 0;
 	background-color: rgba(0, 0, 0, 0.7);
 	overflow: hidden;
+	display: none;
+
+	&.show {
+		display: block;
+		:global {
+			.select {
+				transform: translateY(0);
+			}
+		}
+	}
 	:global {
 		.select {
 			position: fixed;
 			bottom: 0;
 			left: 0;
-			transform: translateY(-100%);
+			transition: transform 0.2 ease-out;
+			transform: translateY(100%);
 			height: 300px;
 			background-color: #fff;
 			width: 100%;
@@ -83,10 +94,11 @@
 						margin: 0;
 						display: block;
 						text-align: center;
-						-webkit-transition: -webkit-transform 0.18s ease-out;
-						transition: -webkit-transform 0.18s ease-out;
-						transition: transform 0.18s ease-out;
-						transition: transform 0.18s ease-out, -webkit-transform 0.18s ease-out;
+						&.ani {
+							transition: -webkit-transform 0.18s ease-out;
+							transition: transform 0.18s ease-out;
+							transition: transform 0.18s ease-out, -webkit-transform 0.18s ease-out;
+						}
 					}
 					li {
 						font-size: 15px;
