--- a/src/app/datePicker/DatePicker.less
+++ b/src/app/datePicker/DatePicker.less
@@ -170,6 +170,9 @@
 								background: #716fcf;
 							}
 						}
+						&.inView {
+							color: rgba(0, 0, 0, 085);
+						}
 						&.cur {
 							.in {
 								color: #fff;
@@ -177,6 +180,8 @@
 							}
 						}
 						&.disable {
+							color: rgba(0, 0, 0, 0.25);
+							pointer-events: none;
 							cursor: not-allowed;
 							&:before {
 								background: #e8ebfc;
@@ -186,9 +191,6 @@
 									background: transparent;
 								}
 							}
-						}
-						&.inView {
-							color: rgba(0, 0, 0, 085);
 						}
 					}
 				}
